--- a/_scss/pages/trailtag.scss
+++ b/_scss/pages/trailtag.scss
@@ -112,7 +112,9 @@
       stroke: $c-trailtag--teal;
     }
     .nav__slider {
-      box-shadow: 0 0 25px $c-trailtag--shadow;
+      @media (min-width: $bp-tablet-vert) {
+        box-shadow: 0 0 25px $c-trailtag--shadow;
+      }
     }
     .divider {
       background-color: $c-trailtag--teal;
